--- a/index.html
+++ b/index.html
@@ -1,14 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="corporate">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpha Clash Pro</title>
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="style/style.css">
     <!-- Daisy Ui and Tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="style/style.css">
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    
+<body class="font-poppins">
+    <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center poppins-light">
+        <!-- home screen  -->
+        <section class="home min-h-screen text-white flex justify-center items-center">
+            <div class="flex flex-col items-center  gap-10">
+                <h1 class="text-8xl font-[800] uppercase">Alpha Clash</h1>
+                <p>Unleash Your Keyboard Kung Fu : Press "Enter" to Play</p>
+                <button onclick="play()" class="btn bg-white text-pink-500"> Play Now</button>
+            </div>
+        </section>
+        <!-- playground start --> 
+        <section class="play-ground hidden">
+            <div class="flex flex-col items-center gap-20 pt-16">
+                <!-- screen start-->
+                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313cc] bg-[#ffffffb3]">
+                    <div class="flex justify-center">
+                        <p class="bg-[#2f2941] text-white px-6 pb-4 rounded-b-xl">Don't watch keyboard  while playing...</p>
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p class="text-black text-9xl font-bold">Y</p>
+                    </div>
+                </div>
+                <!-- screen end-->
+                <!-- keybord start-->
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">q</kbd>
+                        <kbd class="kbd">w</kbd>
+                        <kbd class="kbd">e</kbd>
+                        <kbd class="kbd">r</kbd>
+                        <kbd class="kbd">t</kbd>
+                        <kbd class="kbd">y</kbd>
+                        <kbd class="kbd">u</kbd>
+                        <kbd class="kbd">i</kbd>
+                        <kbd class="kbd">o</kbd>
+                        <kbd class="kbd">p</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">a</kbd>
+                        <kbd class="kbd">s</kbd>
+                        <kbd class="kbd">d</kbd>
+                        <kbd class="kbd">f</kbd>
+                        <kbd class="kbd">g</kbd>
+                        <kbd class="kbd">h</kbd>
+                        <kbd class="kbd">j</kbd>
+                        <kbd class="kbd">k</kbd>
+                        <kbd class="kbd">l</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">z</kbd>
+                        <kbd class="kbd">x</kbd>
+                        <kbd class="kbd">c</kbd>
+                        <kbd class="kbd">v</kbd>
+                        <kbd class="kbd">b</kbd>
+                        <kbd class="kbd">n</kbd>
+                        <kbd class="kbd">m</kbd>
+                        <kbd class="kbd">/</kbd>
+                      </div>
+                </div>
+                <!-- keybord end-->
+                <!-- life score start-->
+                <div class="flex justify-between w-2/4"> 
+                    <button class="btn rounded-full bg-purple-500  text-white border-none">
+                        <p>Like</p>
+                        <i class="fa-regular fa-heart"></i>
+                        <p>1</p>
+                      </button>
+                      <button class="btn rounded-full bg-purple-500  text-white border-none">
+                        <p>Scor</p>
+                        <i class="fa-solid fa-comment-dollar"></i>
+                        <p>1</p>
+                      </button>
+                </div>
+                <!-- life score end-->
+            </div>
+        </section>
+        <!-- playground end -->
+        <!-- final score start -->
+        <section class="score flex justify-center items-center min-h-screen hidden">
+            <div class="text-white text-center space-y-6 bg-[#ffffff33] p-4 rounded-lg">
+                <h1 class="text-8xl"><span class="font-extrabold">Score:</span>
+                <span>14</span>
+            </h1>
+            <button class="btn rounded-lg">Play Again</button>
+            <p>Practice will make you Pro</p>
+            </div>
+        </section>
+    </main>
+    <script src="script/alga-clash.js"></script>
 </body>
 </html>
